Tweaked the leaderboard command for it to look nicer